[package]
name = "scientific-process"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "scientific-process"
path = "src/main.rs"

[lib]
name = "scientific_process"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
